Bug 275478 - [WPE] WPE Platform: fix toplevel states iteration
Summary: [WPE] WPE Platform: fix toplevel states iteration
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WPE WebKit (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Carlos Garcia Campos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-14 03:32 PDT by Carlos Garcia Campos
Modified: 2024-06-14 07:18 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2024-06-14 03:32:13 PDT
The size of a wl_array is in bytes, not in amount of items...
Comment 1 Carlos Garcia Campos 2024-06-14 03:33:42 PDT
Pull request: https://github.com/WebKit/WebKit/pull/29817
Comment 2 EWS 2024-06-14 07:18:32 PDT
Committed 280012@main (b4480d067d93): <https://commits.webkit.org/280012@main>

Reviewed commits have been landed. Closing PR #29817 and removing active labels.