[WPE] WPE Platform: fix toplevel states iteration https://bugs.webkit.org/show_bug.cgi?id=275478

Reviewed by Nikolas Zimmermann.

The size of a wl_array is in bytes, not in amount of items.

* Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:

Canonical link: https://commits.webkit.org/280012@main