Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp
@@ -315,11 +315,9 @@ const struct xdg_toplevel_listener xdgToplevelListener = {
         }
 
         uint32_t pendingState = 0;
-        const auto* stateData = static_cast<uint32_t*>(states->data);
-        for (size_t i = 0; i < states->size; i++) {
-            uint32_t state = stateData[i];
-
-            switch (state) {
+        const char* end = static_cast<const char*>(states->data) + states->size;
+        for (uint32_t* state = static_cast<uint32_t*>(states->data); reinterpret_cast<const char*>(state) < end; ++state) {
+            switch (*state) {
             case XDG_TOPLEVEL_STATE_FULLSCREEN:
                 pendingState |= WPE_VIEW_STATE_FULLSCREEN;
                 break;
